# fatAnalyze

./: .gitignore  CHANGELOG.md  README.md  pyinstaller.spec  pyproject.toml  skills-lock.json
.agents/skills/financial-market-analyst/: SKILL.md
.github/workflows/: build.yml
.ocx/: receipt.jsonc
.opencode/: package-lock.json  package.json
fatanalyze/: __init__.py  cli.py  config.py  modality.py
fatanalyze/analysis/: __init__.py  fat_metrics.py  histogram.py
fatanalyze/config/: mr_presets.yaml  targets.yaml
fatanalyze/gui/: __init__.py  app.py  control_panel.py  controls.py  i18n.py  metrics_runner.py  polygon_item.py  results_panel.py  roi.py  roi_list.py  slice_view.py
fatanalyze/interactive/: __init__.py  analyze.py  analyze_mr.py  polygon_drawer.py  polygon_utils.py  user_roi.py  viz.py
fatanalyze/io/: __init__.py  dicom_loader.py
fatanalyze/roi/: __init__.py  extractor.py
fatanalyze/segment/: __init__.py  totalseg.py
fatanalyze/viz/: __init__.py  histogram_plot.py  overlay.py  summary.py
graphify-out/: .graphify_detect.json  .graphify_python  .graphify_root  env_probe.json
hooks/: runtime_matplotlib.py
notebooks/: interactive_quickstart.ipynb  single_case.ipynb
tests/: conftest.py  test_gui.py  test_histogram.py  test_i18n.py  test_io_qc.py  test_l3_detection.py  test_user_roi.py
